--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     speed: speed,
                 }
 
+                console.log(gpsData);
                 el_speed.innerText = speed;
                 el_maxSpeed.innerText = maxSpeed;
 
