--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
         body{
             background-color: black;
             color: yellowgreen;
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
+        }
+        .container{
+            width: 100%;
+            height: 100%;
+            display: flex;
+        }
+
+        .d{
+            margin: auto;
         }
     </style>
 </head>
