--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
         body{
             background-color: black;
-            color: yellowgreen;
+            color: white;
             margin: 0;
             padding: 0;
             width: 95vw;
@@ -33,7 +33,7 @@
         }
 
         #s{
-            font-size: 600%;
+            font-size: 800%;
             margin: 0;
         }
         #sm{
